--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   </head>
 
   <body onLoad="cat()">
+    <div>
     <div id="bg">
       <div id="particles-js"></div>
       <div class="container">
@@ -45,6 +46,7 @@
           <h1 id="greeting"></h1>
           <h4 id="quotes"></h4>
         </div>
+      </div>
       </div>
     </div>
 
